--- a/assets/scss/assets/colors/colors.scss
+++ b/assets/scss/assets/colors/colors.scss
@@ -3,6 +3,7 @@ $color_notification_active: #FF0000;
 
 /* Borders */
 $color_border-light: #FFFFFF;
+$color_border-default: #C2C2C2;
 
 /* Search form */
 $color_search-form_bg: #EBEBEB;
