--- a/assets/scss/assets/blocks/main_video-player/main_video-player-page.scss
+++ b/assets/scss/assets/blocks/main_video-player/main_video-player-page.scss
@@ -16,6 +16,8 @@ main.video-player-block {
       border-radius: 1.4rem;
     }
     .current-video__description {
+      display: flex;
+      justify-content: space-between;
       padding: 2rem 0;
       border-bottom: 1px solid $color_border-default;
       h1 {
@@ -24,6 +26,42 @@ main.video-player-block {
       }
       p {
         font-size: 2rem;
+      }
+      ul{
+        display: flex;
+        height: 4rem;
+        margin: 0;
+        position: relative;
+        top: 24px;
+        li{
+          display: flex;
+          font-size: 1.6rem;
+          align-items: center;
+          margin-right: 1rem;
+          padding: 1rem 2rem;
+          background-color: #FAFAFA;
+          border-radius: 2rem;
+          &:last-child {
+            margin: 0;
+          }
+          a {
+            display: flex;
+            color: $font-color_bold;
+            img{
+              margin-right: 0.8rem;
+            }
+            div{
+              width: 0.6rem;
+              height: 0.6rem;
+              background-color: $font-color_bold;
+              border-radius: 50%;
+              margin-right: 0.5rem;
+            }
+            div:last-child {
+              margin: 0;
+            }
+          }
+        }
       }
     }
   }
