--- a/assets/scss/assets/blocks/main_video-player/main_video-player-page.scss
+++ b/assets/scss/assets/blocks/main_video-player/main_video-player-page.scss
@@ -1,5 +1,6 @@
 @import "../../typography/font-colors";
 @import "../../colors/colors";
+@import "../../global/breakpoints/breakpoints";
 
 
 .switch {
@@ -63,14 +64,33 @@
 .video-player-block {
   aside {
     display: none;
+
+    @media (max-width: $sm) {
+      display: block;
+    }
   }
 }
+
+
 
 main.video-player-block {
   display: flex;
   padding: 9rem 7rem 5rem 8rem;
+
+  @media (max-width: $xl) {
+    padding: 9rem 4rem 5rem 4rem;
+  }
+
+  @media (max-width: $lg) {
+    display: block;
+  }
+  @media (max-width: $sm) {
+    padding: 0;
+  }
+
   .current-video {
     padding: 0 2rem 0 0;
+
     video {
       width: 100%;
       object-fit: cover;
@@ -125,6 +145,16 @@ main.video-player-block {
           }
         }
       }
+
+      @media (max-width: $sm) {
+        display: flex;
+        flex-direction: column;
+        ul {
+          justify-content: space-between;
+          padding: 0;
+          position: unset;
+        }
+      }
     }
     .current-video__description {
       padding: 4rem 0 0 0;
@@ -156,9 +186,59 @@ main.video-player-block {
           position: unset;
         }
       }
+      @media (max-width: $sm) {
+        width: auto;
+        padding: 2rem 0;
+        margin-bottom: 2rem;
+        border-bottom: 1px solid $color_border-default;
+        align-items: center;
+        .current-video-description {
+          width: auto;
+          .vide-description__text {
+            display: none;
+          }
+          .show-more {
+            display: none;
+          }
+        }
+        .video-content__navigation {
+          display: none;
+        }
+      }
+    }
+    @media (max-width: $xxll) {
+      width: calc(100% - 30rem);
+      video {
+        height: 50rem;
+      }
+    }
+
+    @media (max-width: $xxl) {
+      width: calc(100% - 30rem);
+      video {
+        height: 45rem;
+      }
+    }
+
+    @media (max-width: $xl) {
+      video {
+        height: 40rem;
+      }
+    }
+
+    @media (max-width: $lg) {
+      width: 100%;
+    }
+
+    @media (max-width: $sm) {
+      padding: 0;
+      video {
+        border-radius: unset;
+        height: 25rem;
+      }
     }
   }
-  .next-video__block {
+  .next-video__block  {
     max-height: 105rem;
     overflow-y: hidden;
     width: 47.5rem;
@@ -180,11 +260,85 @@ main.video-player-block {
         }
       }
     }
+
+    @media (max-width: $xxll) {
+      .next-video__block__header {
+        h2 {
+          font-size: 3rem;
+        }
+      }
+    }
+
+    @media (max-width: $xxl) {
+      width: 37.5rem;
+      .next-video__block__header {
+        h2 {
+          font-size: 2.6rem;
+        }
+        div {
+          display: flex;
+          align-items: center;
+          p {
+            display: none;
+          }
+        }
+      }
+    }
+
+    @media (max-width: $xl) {
+      width: 27.5rem;
+    }
+
+    @media (max-width: $lg) {
+      width: 100%;
+    }
+
+    @media (max-width: $sm) {
+      width: auto;
+      padding: 0;
+    }
+
     .next-video {
       display: inline-grid;
       grid-template-rows: repeat(6, 1fr);
       row-gap: 3rem;
+
+      @media (max-width: $lg) {
+        grid-template-rows: unset;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 2rem;
+        overflow: hidden;
+      }
+
+      @media (max-width: $md) {
+        grid-template-rows: unset;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+        overflow: hidden;
+      }
+
+      @media (max-width: $sm) {
+        display: flex;
+        flex-direction: column
+      }
+
       .content__tab {
+
+        @media (max-width: $lg) {
+          &:nth-last-child(1) {
+            display: none;
+          }
+        }
+
+        @media (max-width: $md) {
+          &:nth-last-child(2) {
+            display: none;
+          }
+        }
+
+        h2 {
+          line-height: 1.25;
+        }
         .video-content {
           width: 100%;
           height: 21rem;
@@ -200,11 +354,29 @@ main.video-player-block {
               content: '';
             }
           }
+        }
 
+        @media (max-width: $xxll) {
+          h2 {
+            font-size: 2.2rem;
+          }
+          .video-content {
+            height: 15rem;
+          }
+          span {
+            font-size: 1.6rem;
+          }
+          .content-info {
+            p {
+              font-size: 1.6rem;
+            }
+          }
         }
       }
     }
   }
-
 }
 
+.mobile {
+  margin: 0 1.6rem;
+}
