--- a/assets/scss/assets/typography/fonts.scss
+++ b/assets/scss/assets/typography/fonts.scss
@@ -1,11 +1,11 @@
-/* Importing font: Muli - 300 / 400 / 700 / 800
+/* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
 @import url("https://use.typekit.net/jrb6nlz.css");
 @import "font-colors";
 
 * {
-  font-family: "Muli", sans-serif;
+  font-family: "Mulish", sans-serif;
   color: $font-color_main;
   font-weight: 400;
 }
