--- a/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
+++ b/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
@@ -2,7 +2,7 @@
 /* Search-form */
 /* Links */
 /* Borders */
-/* Importing font: Muli - 300 / 400 / 700 / 800
+/* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
 @import url("https://use.typekit.net/jrb6nlz.css");
@@ -11,7 +11,7 @@
 /* Links */
 /* Borders */
 * {
-  font-family: "Muli", sans-serif;
+  font-family: "Mulish", sans-serif;
   color: #C2C2C2;
   font-weight: 400;
 }
