--- a/assets/css/assets/typography/fonts.css
+++ b/assets/css/assets/typography/fonts.css
@@ -1,4 +1,4 @@
-/* Importing font: Muli - 300 / 400 / 700 / 800
+/* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
 @import url("https://use.typekit.net/jrb6nlz.css");
@@ -7,7 +7,7 @@
 /* Links */
 /* Borders */
 * {
-  font-family: "Muli", sans-serif;
+  font-family: "Mulish", sans-serif;
   color: #C2C2C2;
   font-weight: 400;
 }
