--- a/assets/scss/assets/blocks/header/header.scss
+++ b/assets/scss/assets/blocks/header/header.scss
@@ -29,6 +29,7 @@ header {
     }
 
     @media (max-width: $sm) {
+      padding: 0;
       height: 5rem;
     }
 
@@ -183,6 +184,10 @@ header {
             width: 3rem;
             height: 3rem;
           }
+        }
+
+        @media (max-width: $xs){
+          display: none;
         }
 
         img {
