--- a/assets/scss/assets/blocks/main_video-player/main_video-player-page.scss
+++ b/assets/scss/assets/blocks/main_video-player/main_video-player-page.scss
@@ -27,6 +27,30 @@
       box-shadow: 0 0 1px #FAFAFA;
     }
   }
+  @media (max-width: $xs) {
+    width: 30px;
+    height: 19px;
+    margin: 0 0 0 1.2rem;
+    input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+      &:checked + .slider {
+        background-color: #FAFAFA;
+        &:before {
+          -webkit-transform: translateX(12px);
+          -ms-transform: translateX(12px);
+          transform: translateX(12px);
+          background-color: #2196F3;
+          box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.237602);
+        }
+      }
+      &:focus + .slider {
+        box-shadow: 0 0 1px #FAFAFA;
+      }
+    }
+
+  }
 }
 
 .slider {
@@ -55,6 +79,24 @@
     border-radius: 24px;
     &:before {
       border-radius: 50%;
+    }
+  }
+  @media (max-width: $xs) {
+    &:before {
+      height: 16px;
+      width: 16px;
+      left: 1px;
+      bottom: 2px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+      box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.237602);
+    }
+    &.round {
+      border-radius: 16px;
+      &:before {
+        border-radius: 50%;
+      }
     }
   }
 }
@@ -102,13 +144,31 @@ main.video-player-block {
       justify-content: space-between;
       padding: 2rem 0;
       border-bottom: 1px solid $color_border-default;
-      h1 {
-        font-size: 3.6rem;
-        margin-bottom: 1.4rem;
+      @media (max-width: $xs) {
+        padding: 1.5rem 0 3rem 0;
       }
-      p {
-        font-size: 2rem;
+      .current-video-title {
+        h1 {
+          font-size: 3.6rem;
+          margin-bottom: 1.4rem;
+        }
+        p {
+          font-size: 2rem;
+        }
+        @media (max-width: $xs) {
+          padding: 0 0 2rem 0;
+          h1 {
+            width: 21rem;
+            font-size: 2rem;
+            line-height: 2.5rem;
+            margin: 0 0 0.4rem 0;
+          }
+          p {
+            font-size: 1.2rem;
+          }
+        }
       }
+
       ul{
         display: flex;
         height: 4rem;
@@ -161,10 +221,17 @@ main.video-player-block {
       img {
         width: 8rem;
         height: 8rem;
+        @media (max-width: $xs) {
+          width: 5rem;
+          height: 5rem;
+        }
       }
       .current-video-description {
         width: 82rem;
         padding: 0 0 0 1.2rem;
+        .subscribed-qty {
+          display: none;
+        }
         .published-date {
           font-size: 1.3rem;
         };
@@ -175,6 +242,22 @@ main.video-player-block {
         }
         .show-more {
           font-size: 2rem;
+        }
+        @media (max-width: $xs) {
+          padding: 0 0 0 1rem;
+          h2 {
+            font-size: 1.6rem;
+            line-height: 2rem;
+            margin: 0 0 0.4rem;
+          }
+          .published-date {
+            display: none;
+          }
+          .subscribed-qty {
+            display: block;
+            font-size: 1.2rem;
+            line-height: 1.5rem;
+          }
         }
       }
       .video-content__navigation {
@@ -237,6 +320,16 @@ main.video-player-block {
         height: 25rem;
       }
     }
+
+    @media (max-width: $sm) {
+      padding: 6rem 0 0 0;
+      video {
+        border-radius: unset;
+        height: 18rem;
+      }
+    }
+
+
   }
   .next-video__block  {
     max-height: 105rem;
@@ -259,30 +352,44 @@ main.video-player-block {
           color: $font-color_bold;
         }
       }
-    }
 
-    @media (max-width: $xxll) {
-      .next-video__block__header {
+      @media (max-width: $xxll) {
         h2 {
           font-size: 3rem;
         }
       }
-    }
 
-    @media (max-width: $xxl) {
-      width: 37.5rem;
-      .next-video__block__header {
+      @media (max-width: $xxl) {
+          h2 {
+            font-size: 2.6rem;
+          }
+          div {
+            display: flex;
+            align-items: center;
+            p {
+              display: none;
+            }
+          }
+      }
+
+      @media (max-width: $xs) {
+        margin: 0 0 1.3rem 0;
         h2 {
-          font-size: 2.6rem;
+          font-size: 2rem;
         }
         div {
-          display: flex;
-          align-items: center;
           p {
-            display: none;
+            display: block;
+            font-size: 1rem;
           }
         }
       }
+    }
+
+
+
+    @media (max-width: $xxl) {
+      width: 37.5rem;
     }
 
     @media (max-width: $xl) {
@@ -372,11 +479,93 @@ main.video-player-block {
             }
           }
         }
+
+        @media (max-width: $sm) {
+          width: 100%;
+          margin: 0 auto;
+          &:nth-last-child(1),
+          &:nth-last-child(2) {
+            display: inline-block;
+          }
+          h2 {
+            font-size: 2.2rem;
+            line-height: 2.5rem;
+            margin: 0 0 1rem 0;
+          }
+          .video-content {
+            height: auto;
+          }
+          span {
+            font-size: 1.6rem;
+            line-height: 1.6rem;
+          }
+          .content-info {
+            p {
+              font-size: 1.6rem;
+              line-height: 1.6rem;
+            }
+          }
+        }
+
+        @media (max-width: $xs) {
+          margin: 0 auto;
+          &:nth-last-child(1),
+          &:nth-last-child(2) {
+            display: inline-block;
+          }
+          h2 {
+            font-size: 1.6rem;
+            margin: 0;
+          }
+          .video-content {
+            height: 15rem;
+          }
+          span {
+            font-size: 1.3rem;
+            line-height: 1.3rem;
+          }
+          .content-info {
+            p {
+              font-size: 1.3rem;
+              line-height: 1.3rem;
+            }
+          }
+        }
+
       }
+    }
+  }
+}
+
+.current-video__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  .video-title__dropdown {
+    display: none;
+    @media (max-width: $xs) {
+      display: block;
     }
   }
 }
 
 .mobile {
   margin: 0 1.6rem;
+}
+
+.header-options {
+  display: none;
+  div {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: $font-color_black;
+    &:nth-child(2) {
+      margin: 0.2rem 0;
+    }
+  }
+  @media (max-width: $xs) {
+    display: block;
+    margin: 0 0 0 3rem;
+  }
 }
