index.php video attributes format fixed

--- a/assets/css/assets/global/blocks/blocks.css
+++ b/assets/css/assets/global/blocks/blocks.css
@@ -108,13 +108,14 @@
 }
 .content__tab h4 {
   margin-top: 1rem;
+  line-height: 1.5;
 }
 .content__tab .content-info {
   display: flex;
   justify-content: space-between;
 }
 .content__tab .content-info span {
-  padding: 0.4rem 0 0 0;
+  padding: 0;
   font-size: 1.3rem;
 }
 @media (max-width: 390px) {
@@ -125,7 +126,7 @@
 
 .content_data {
   display: flex;
-  padding: 0.4rem 0 0 0;
+  padding: 0;
 }
 .content_data p {
   font-size: 1.3rem;
