--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -406,13 +406,14 @@ input::placeholder {
 }
 .content__tab h4 {
   margin-top: 1rem;
+  line-height: 1.5;
 }
 .content__tab .content-info {
   display: flex;
   justify-content: space-between;
 }
 .content__tab .content-info span {
-  padding: 0.4rem 0 0 0;
+  padding: 0;
   font-size: 1.3rem;
 }
 @media (max-width: 390px) {
@@ -423,7 +424,7 @@ input::placeholder {
 
 .content_data {
   display: flex;
-  padding: 0.4rem 0 0 0;
+  padding: 0;
 }
 .content_data p {
   font-size: 1.3rem;
