--- a/assets/scss/assets/global/blocks/content_tab.scss
+++ b/assets/scss/assets/global/blocks/content_tab.scss
@@ -65,12 +65,13 @@
   }
   h4 {
     margin-top: 1rem;
+    line-height: 1.5;
   }
   .content-info {
     display: flex;
     justify-content: space-between;
     span {
-      padding: 0.4rem 0 0 0;
+      padding: 0;
       font-size: 1.3rem;
     }
     @media (max-width: $xs) {
@@ -82,7 +83,7 @@
 
 .content_data {
   display: flex;
-  padding: 0.4rem 0 0 0;
+  padding: 0;
   p {
     font-size: 1.3rem;
     margin: 0;
