index.php fixed

--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -224,6 +224,9 @@ header .container .header__user-block .header__user-block__user-profile {
   header .container .header__user-block .header__user-block__user-profile {
     display: none;
   }
+  header .container .header__user-block .header__user-block__user-profile.displayed {
+    display: unset;
+  }
 }
 header .container .header__user-block .header__user-block__user-profile img {
   width: 100%;
@@ -556,7 +559,8 @@ input::placeholder {
 }
 @media (max-width: 1050px) {
   .subscribed-author {
-    padding: 1.8rem;
+    padding: 4rem 1.8rem 0;
+    margin: 0;
   }
 }
 @media (max-width: 576px) {
@@ -648,6 +652,23 @@ input::placeholder {
   column-gap: 4rem;
 }
 
+.recommended.content__section {
+  padding: 0;
+}
+@media (max-width: 838px) {
+  .recommended.content__section {
+    padding: 3rem 1.8rem 0;
+  }
+}
+
+.recommended__channels {
+  padding: 0;
+}
+@media (max-width: 838px) {
+  .recommended__channels {
+    padding: 0 1.8rem;
+  }
+}
 @media (max-width: 390px) {
   .recommended__channels {
     display: none;
