--- a/assets/scss/assets/global/blocks/blocks.scss
+++ b/assets/scss/assets/global/blocks/blocks.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.displayed {
+  display: block;
+}
+
 @import "channel_info";
 @import "content_tab";
 @import "video-content_navigation";
