--- a/assets/css/assets/blocks/main_home-page/main_home-page.css
+++ b/assets/css/assets/blocks/main_home-page/main_home-page.css
@@ -49,7 +49,8 @@ input::placeholder {
 }
 @media (max-width: 1050px) {
   .subscribed-author {
-    padding: 1.8rem;
+    padding: 4rem 1.8rem 0;
+    margin: 0;
   }
 }
 @media (max-width: 576px) {
@@ -141,6 +142,23 @@ input::placeholder {
   column-gap: 4rem;
 }
 
+.recommended.content__section {
+  padding: 0;
+}
+@media (max-width: 838px) {
+  .recommended.content__section {
+    padding: 3rem 1.8rem 0;
+  }
+}
+
+.recommended__channels {
+  padding: 0;
+}
+@media (max-width: 838px) {
+  .recommended__channels {
+    padding: 0 1.8rem;
+  }
+}
 @media (max-width: 390px) {
   .recommended__channels {
     display: none;
