--- a/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
+++ b/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
@@ -48,7 +48,8 @@ input::placeholder {
 }
 @media (max-width: 1050px) {
   .subscribed-author {
-    padding: 1.8rem;
+    padding: 4rem 1.8rem 0;
+    margin: 0;
   }
 }
 @media (max-width: 576px) {
