--- a/assets/scss/assets/blocks/main_home-page/subscribed-author/subscribed-author.scss
+++ b/assets/scss/assets/blocks/main_home-page/subscribed-author/subscribed-author.scss
@@ -6,7 +6,8 @@
   padding: 2.9rem 0 0 0;
 
   @media (max-width: $lg) {
-    padding: 1.8rem;
+    padding: 4rem 1.8rem 0;
+    margin: 0;
   }
   .channel__info {
 
