--- a/assets/css/assets/blocks/main_home-page/main_home-page.css
+++ b/assets/css/assets/blocks/main_home-page/main_home-page.css
@@ -52,6 +52,14 @@ input::placeholder {
     padding: 4rem 1.8rem 0;
     margin: 0;
   }
+  .subscribed-author.channel {
+    padding: 2.4rem 1.8rem 0;
+  }
+}
+@media (max-width: 576px) {
+  .subscribed-author.channel {
+    padding: 0 1.8rem 0;
+  }
 }
 @media (max-width: 576px) {
   .subscribed-author .channel__info {
@@ -181,6 +189,11 @@ input::placeholder {
 main {
   overflow: hidden;
   padding-top: 8.4rem;
+}
+@media (max-width: 576px) {
+  main.channel-page {
+    padding-top: 6rem;
+  }
 }
 
 /*# sourceMappingURL=main_home-page.css.map */
