--- a/assets/css/assets/blocks/header/header.css
+++ b/assets/css/assets/blocks/header/header.css
@@ -161,7 +161,10 @@ header .container .header__user-block .header__user-block__notifications {
   position: relative;
 }
 header .container .header__user-block .header__user-block__notifications .notification__counter {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
   width: 1.8rem;
   height: 1.8rem;
   z-index: 10;
@@ -176,7 +179,6 @@ header .container .header__user-block .header__user-block__notifications .notifi
   text-align: center;
   padding: 0.25rem;
   font-weight: 800;
-  line-height: 1.2;
 }
 header .container .header__user-block .header__user-block__user-profile {
   display: inline-block;
