--- a/assets/css/assets/global/global.css
+++ b/assets/css/assets/global/global.css
@@ -81,8 +81,13 @@
 }
 .content__tab .video-content {
   border-radius: 1.4rem;
-  background-color: rgba(0, 0, 0, 0.07);
   position: relative;
+}
+@media (max-width: 1530px) {
+  .content__tab .video-content.channel {
+    width: auto;
+    height: 100%;
+  }
 }
 .content__tab .video-content video {
   aspect-ratio: 16/9;
