--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -378,8 +378,13 @@ input::placeholder {
 }
 .content__tab .video-content {
   border-radius: 1.4rem;
-  background-color: rgba(0, 0, 0, 0.07);
   position: relative;
+}
+@media (max-width: 1530px) {
+  .content__tab .video-content.channel {
+    width: auto;
+    height: 100%;
+  }
 }
 .content__tab .video-content video {
   aspect-ratio: 16/9;
@@ -713,7 +718,10 @@ header .container .header__user-block .header__user-block__notifications {
   position: relative;
 }
 header .container .header__user-block .header__user-block__notifications .notification__counter {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
   width: 1.8rem;
   height: 1.8rem;
   z-index: 10;
@@ -728,7 +736,6 @@ header .container .header__user-block .header__user-block__notifications .notifi
   text-align: center;
   padding: 0.25rem;
   font-weight: 800;
-  line-height: 1.2;
 }
 header .container .header__user-block .header__user-block__user-profile {
   display: inline-block;
@@ -772,6 +779,7 @@ header .container .header__user-block .header__user-block__user-profile img {
 }
 @media (max-width: 1530px) {
   .author-current-video__block {
+    padding: 2.4rem 0 0 0;
     flex-direction: column;
     margin: 0;
   }
@@ -898,7 +906,10 @@ header .container .header__user-block .header__user-block__user-profile img {
 .channel__cover {
   height: 28rem;
   border-radius: 1.4rem;
-  background-color: #898989;
+  background-repeat: no-repeat;
+  background-image: url("../img/header/cover.png");
+  background-position: center;
+  background-size: cover;
   width: calc(100% - 7rem);
 }
 @media (max-width: 1050px) {
@@ -927,7 +938,7 @@ header .container .header__user-block .header__user-block__user-profile img {
     padding-right: 3.2rem;
   }
 }
-@media (max-width: 1530px) {
+@media (max-width: 838px) {
   .channel__content {
     padding: 1rem 1.8rem 0 1.8rem;
   }
@@ -1087,6 +1098,14 @@ input::placeholder {
     padding: 4rem 1.8rem 0;
     margin: 0;
   }
+  .subscribed-author.channel {
+    padding: 2.4rem 1.8rem 0;
+  }
+}
+@media (max-width: 576px) {
+  .subscribed-author.channel {
+    padding: 0 1.8rem 0;
+  }
 }
 @media (max-width: 576px) {
   .subscribed-author .channel__info {
@@ -1216,6 +1235,11 @@ input::placeholder {
 main {
   overflow: hidden;
   padding-top: 8.4rem;
+}
+@media (max-width: 576px) {
+  main.channel-page {
+    padding-top: 6rem;
+  }
 }
 
 /* Font-colors */
