--- a/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
+++ b/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
@@ -7,7 +7,10 @@
 .channel__cover {
   height: 28rem;
   border-radius: 1.4rem;
-  background-color: #898989;
+  background-repeat: no-repeat;
+  background-image: url("../img/header/cover.png");
+  background-position: center;
+  background-size: cover;
   width: calc(100% - 7rem);
 
 
@@ -32,7 +35,7 @@
     padding-right: 3.2rem;
   }
 
-  @media (max-width: $xxll) {
+  @media (max-width: $md) {
     padding: 1rem 1.8rem 0 1.8rem;
   }
 
