--- a/assets/scss/assets/blocks/main_home-page/subscribed-author/subscribed-author.scss
+++ b/assets/scss/assets/blocks/main_home-page/subscribed-author/subscribed-author.scss
@@ -8,9 +8,18 @@
   @media (max-width: $lg) {
     padding: 4rem 1.8rem 0;
     margin: 0;
+    &.channel {
+      padding: 2.4rem 1.8rem 0;
+    }
   }
-  .channel__info {
 
+  @media (max-width: $sm) {
+    &.channel {
+      padding: 0 1.8rem 0;
+    }
+  }
+
+  .channel__info {
     @media (max-width: $sm) {
       display: none;
     }
