--- a/assets/scss/assets/global/blocks/content_tab.scss
+++ b/assets/scss/assets/global/blocks/content_tab.scss
@@ -31,8 +31,13 @@
   }
   .video-content {
     border-radius: 1.4rem;
-    background-color: rgba(0, 0, 0, 0.07);
     position: relative;
+    &.channel {
+      @media (max-width: $xxll) {
+        width: auto;
+        height: 100%;
+      }
+    }
     video {
       aspect-ratio: 16 / 9;
       width: 100%;
