--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -427,7 +427,7 @@ input::placeholder {
 }
 @media (max-width: 390px) {
   .content__tab .content-info {
-    max-width: 28.8rem;
+    width: auto;
   }
 }
 
@@ -1619,6 +1619,11 @@ main.video-player-block .next-video__block {
   width: 47.5rem;
   padding: 0 0 0 2rem;
 }
+@media (max-width: 1050px) {
+  main.video-player-block .next-video__block {
+    padding: 0;
+  }
+}
 main.video-player-block .next-video__block .next-video__block__header {
   display: flex;
   justify-content: space-between;
@@ -1650,6 +1655,11 @@ main.video-player-block .next-video__block .next-video__block__header div p {
   }
   main.video-player-block .next-video__block .next-video__block__header div p {
     display: none;
+  }
+}
+@media (max-width: 1050px) {
+  main.video-player-block .next-video__block .next-video__block__header {
+    padding: 0 4rem 0 0;
   }
 }
 @media (max-width: 390px) {
@@ -1787,7 +1797,8 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
   }
   main.video-player-block .next-video__block .next-video .content__tab h2 {
     font-size: 1.6rem;
-    margin: 0;
+    margin: 0 0 0.5rem 0;
+    line-height: 1;
   }
   main.video-player-block .next-video__block .next-video .content__tab .video-content {
     height: 15rem;
